[gd_scene load_steps=15 format=2]

[ext_resource path="res://Font/ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scn/Scripts/Expense.gd" type="Script" id=2]
[ext_resource path="res://Scn/Scripts/EditText.gd" type="Script" id=3]
[ext_resource path="res://Scn/img/UI Expense.png" type="Texture" id=4]
[ext_resource path="res://Font/Comfortaa-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Font/Comfortaa-Light.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 33
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 1 )

[node name="Expense" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.921569 )
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 720.0
margin_bottom = 1280.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UI Box expense" type="Sprite" parent="."]
position = Vector2( 360, 648 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="ExpensePanel" type="Control" parent="."]
margin_left = 80.0
margin_top = 552.0
margin_right = 656.0
margin_bottom = 832.0

[node name="Amount" type="LineEdit" parent="ExpensePanel"]
margin_left = -16.0
margin_top = -8.0
margin_right = 216.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="ExpensePanel"]
margin_left = 352.0
margin_top = -48.0
margin_right = 448.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="ExpensePanel"]
margin_left = 56.0
margin_top = -216.0
margin_right = 504.0
margin_bottom = -144.0
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Undo" type="Button" parent="ExpensePanel"]
margin_left = 472.0
margin_top = -48.0
margin_right = 568.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "Undo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpenseHistory" type="Control" parent="."]
margin_left = 64.0
margin_top = 784.0
margin_right = 648.0
margin_bottom = 1120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="ExpenseHistory"]
margin_left = 16.0
margin_top = 24.0
margin_right = 568.0
margin_bottom = 352.0
theme = SubResource( 6 )
custom_fonts/normal_font = SubResource( 7 )
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = 600.0
margin_top = 48.0
margin_right = 680.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 8 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ExpensePanel/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="ExpensePanel/Undo" to="." method="_on_Undo_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
